# LoanTap

./: LoanTap - Loan approval.ipynb  compose.yaml  pyproject.toml
mlflow_tracking/mlruns/0/: meta.yaml
mlflow_tracking/mlruns/529194635109779319/: meta.yaml
mlflow_tracking/mlruns/529194635109779319/03015d589f7949d0b30a5cf8e56aec65/: meta.yaml
mlflow_tracking/mlruns/529194635109779319/04bb08273bdf43f1ade78f144bd5e1a4/: meta.yaml
mlflow_tracking/mlruns/529194635109779319/0d19f9e6f85f4d11971acd6b798964bf/: meta.yaml
mlflow_tracking/mlruns/529194635109779319/15941c178d1e42feba02eda5471dd7a9/: meta.yaml
mlflow_tracking/mlruns/529194635109779319/18d46cc34cda4c14870c7745ce99256c/: meta.yaml
mlflow_tracking/mlruns/529194635109779319/199684053fb249fc8409500fc25505f9/: meta.yaml
mlflow_tracking/mlruns/529194635109779319/1a45d4da97034d83b6eebe8ffdfc0b95/: meta.yaml
mlflow_tracking/mlruns/529194635109779319/269af15309d34d68b6fdd5cedf8a2a4e/: meta.yaml
mlflow_tracking/mlruns/529194635109779319/3085a37a9ef1445fb0659f28ccc1ec66/: meta.yaml
notebooks/: Problem_statement.ipynb  Step-0 Problem Framing.ipynb  Step-1 EDA.ipynb  Step-2 Data Preprocessing.ipynb  Step-3 Training models.ipynb  Step-4 Model Optimization.ipynb
src/: utils.py
src/backend/: Dockerfile  main.py  requirements.txt
src/backend/data_preprocessing/: preprocessor.py
src/backend/models/: ensemble_model.pkl
src/backend/routers/: predict.py
src/data_preprocessing/: preprocessor.py  transformers.py
src/frontend/: Dockerfile  main.py
(+266 files in other folders)
